[gd_scene load_steps=7 format=3 uid="uid://duakkxgd5gyic"]

[ext_resource type="Script" path="res://scripts/win_or_lose.gd" id="1_7o3n0"]
[ext_resource type="FontFile" uid="uid://dykx4mffqvb0r" path="res://fonts/Shentox-Regular (RUS by Slavchansky)_0.ttf" id="2_2y0r7"]
[ext_resource type="LabelSettings" uid="uid://r2h2pmcd4rmp" path="res://fonts/font_settings.tres" id="3_hrbgh"]

[sub_resource type="Animation" id="Animation_4kqaf"]
resource_name = "PLAY"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("YourScore:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ButtonAgain:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ButtonMenu:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q4yak"]
_data = {
"PLAY": SubResource("Animation_4kqaf")
}

[sub_resource type="LabelSettings" id="LabelSettings_mrch1"]
font = ExtResource("2_2y0r7")
font_size = 64

[node name="WinOrLose" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -270.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7o3n0")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q4yak")
}

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -960.0
offset_top = -540.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.243137, 0.243137, 0.243137, 0.745098)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -113.0
offset_right = 480.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(480, 56)
label_settings = SubResource("LabelSettings_mrch1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="YourScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = 19.0
offset_right = 480.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(480, 17)
label_settings = ExtResource("3_hrbgh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonAgain" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 260.0
offset_top = -197.0
offset_right = 420.0
offset_bottom = -157.0
grow_vertical = 0
pivot_offset = Vector2(80, 20)
focus_mode = 0
theme_override_fonts/font = ExtResource("2_2y0r7")
theme_override_font_sizes/font_size = 16
text = "$Again"

[node name="ButtonMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -420.0
offset_top = -197.0
offset_right = -260.0
offset_bottom = -157.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(80, 20)
focus_mode = 0
theme_override_fonts/font = ExtResource("2_2y0r7")
theme_override_font_sizes/font_size = 16
text = "$Menu"

[connection signal="pressed" from="ButtonAgain" to="." method="_on_button_again_pressed"]
[connection signal="pressed" from="ButtonMenu" to="." method="_on_button_menu_pressed"]
